# eregion

./: .dockerignore  .envrc.example  .gitignore  CLAUDE.md  CLAUDE_ANNATAR.md  CLAUDE_GLORFINDEL.md  CLAUDE_TESTS.md  CLAUDE_WARROOM.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  detection_rules.yaml  docker-compose.yml  glorfindel-config.yaml.example  pyproject.toml
annatar/: Dockerfile  cli.py
annatar/collectors/: azure_monitor.py
annatar/executors/: azure_vm.py
annatar/runner/: engine.py  initializer.py  parser.py  report.py
annatar/safety/: guard.py
annatar/scenarios/azure/: account-creation.yaml  data-exfiltration.yaml  lateral-movement.yaml  privilege-escalation.yaml  ransomware-vm.yaml
annatar/signals/: emitter.py  schema.py
collab/: annatar_status.md  glorfindel_status.md  inbox_annatar.md  inbox_general.md  inbox_glorfindel.md  inbox_tests.md  inbox_warroom.md  test_results.md  warroom_status.md
glorfindel/: Dockerfile  __init__.py  actions.py  agent.py  api.py  audit.py  bot.py  cli.py  config.py  detection_rules.py  detectors.py  discovery.py  escalations.py  few_shot_examples.yaml  incidents.py  jobs.py  memory.py  posture.py  proposed_rules.py  signals.py  tui.py
glorfindel/rules/azure/: detection_rules.yaml
glorfindel/static/: index.html
infra/: vm.sh
infra/terraform/: backup.tf  config.yaml  locals.tf  main.tf  monitoring.tf  network.tf  outputs.tf  storage.tf  terraform.tfvars.example  variables.tf  vm.tf
scenarios/azure/: data-exfiltration.yaml  lateral-movement.yaml  privilege-escalation.yaml  ransomware-vm.yaml
schemas/: scenario.schema.json
scripts/: exfil_sim.sh  ransomware_sim.sh  setup.sh  simulate_annatar.py  test_restore.py  verify_restore.sh
scripts/vm/: account_creation_sim.sh  cleanup_testdata.sh  exfil_sim.sh  lateral_movement_sim.sh  privilege_escalation_sim.sh  ransomware_sim.sh  setup_testdata.sh  verify_restore.sh
sechaos/: cli.py
sechaos/executors/: azure_vm.py
sechaos/runner/: engine.py
sechaos/safety/: guard.py
tests/unit/: conftest.py  test_agent_nodes.py  test_audit.py  test_config.py  test_detection_rules.py  test_discovery.py  test_engine.py  test_glorfindel.py  test_guard.py  test_jobs.py  test_parser.py  test_posture.py  test_proposed_rules.py  test_signals.py
