[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eregion"
version = "0.2.0"
description = "Active cloud defense platform — Annatar simulates attacks, Glorfindel responds"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
keywords = ["security", "cloud", "azure", "chaos-engineering", "defense", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    # Shared by both agents
    "azure-identity>=1.15",
    "click>=8.1",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
annatar = [
    "azure-mgmt-compute>=30.0",
    "azure-mgmt-network>=25.0",
    "azure-mgmt-resource>=23.0",
    "azure-monitor-query>=1.3",
]
glorfindel = [
    "azure-mgmt-compute>=30.0",
    "azure-mgmt-network>=25.0",
    "azure-monitor-query>=1.3",
    "azure-mgmt-recoveryservicesbackup>=9.0",
    "langgraph>=0.1",
    "anthropic>=0.25",
    "litellm>=1.0",
    "chromadb>=0.5",
    "requests>=2.31",
]
dev = [
    "eregion[annatar,glorfindel]",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[project.scripts]
annatar = "annatar.cli:cli"
glorfindel = "glorfindel.cli:cli"

[project.urls]
Homepage = "https://github.com/Vanyar53/eregion"
Issues = "https://github.com/Vanyar53/eregion/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["annatar*", "glorfindel*", "scenarios*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["annatar", "glorfindel"]
omit = ["tests/*", "scripts/*"]
